--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "type": "module",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "keywords": [
     "lmdb",
@@ -51,21 +51,21 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+      "default": "./dist/index.js"
     },
     "./core": {
       "types": "./dist/core.d.ts",
-      "import": "./dist/core.mjs",
+      "import": "./dist/core.js",
       "require": "./dist/core.cjs",
-      "default": "./dist/core.mjs"
+      "default": "./dist/core.js"
     },
     "./modules": {
       "types": "./dist/modules.d.ts",
-      "import": "./dist/modules.mjs",
+      "import": "./dist/modules.js",
       "require": "./dist/modules.cjs",
-      "default": "./dist/modules.mjs"
+      "default": "./dist/modules.js"
     }
   }
 }
