chore: add prepare script to package.json and clean up imports in StoreManager.ts

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "manager"
   ],
   "scripts": {
+    "prepare": "tsup",
     "build": "tsup",
     "release": "git push --follow-tags",
     "version:patch": "pnpm version patch",
