--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
       "require": "./dist/index.cjs",
       "default": "./dist/index.mjs"
     },
-    "./core": {
-      "types": "./dist/core.d.ts",
-      "import": "./dist/core.mjs",
-      "require": "./dist/core.cjs",
-      "default": "./dist/core.mjs"
-    },
     "./modules": {
       "types": "./dist/modules.d.ts",
       "import": "./dist/modules.mjs",
       "require": "./dist/modules.cjs",
       "default": "./dist/modules.mjs"
+    },
+    "./plugins": {
+      "types": "./dist/plugins.d.ts",
+      "import": "./dist/plugins.mjs",
+      "require": "./dist/plugins.cjs",
+      "default": "./dist/plugins.mjs"
     }
   }
 }
