--- a/package.json
+++ b/package.json
@@ -4,22 +4,19 @@
   "version": "0.9.2",
   "author": "Yog4a",
   "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "prepare": "tsup",
     "prepack": "tsup",
-    "build": "tsup",
-    "test": "node --import tsx --test",
+    "test": "node --import tsx tests/test.ts",
     "tags": "git push --follow-tags",
+    "build": "tsup",
     "build:patch": "npm version patch && npm run build",
     "build:minor": "npm version minor && npm run build",
     "build:major": "npm version major && npm run build",
     "version:patch": "npm version patch",
     "version:minor": "npm version minor",
     "version:major": "npm version major",
-    "update:check": "npx npm-check-updates -u",
+    "update:check": "npx npm-check-updates",
     "update:install": "npm install"
   },
   "devDependencies": {
@@ -37,23 +34,21 @@
     "README.md"
   ],
   "exports": {
+    "./package.json": "./package.json",
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
+      "require": "./dist/index.cjs"
     },
     "./modules": {
       "types": "./dist/modules.d.ts",
       "import": "./dist/modules.mjs",
-      "require": "./dist/modules.cjs",
-      "default": "./dist/modules.mjs"
+      "require": "./dist/modules.cjs"
     },
     "./plugins": {
       "types": "./dist/plugins.d.ts",
       "import": "./dist/plugins.mjs",
-      "require": "./dist/plugins.cjs",
-      "default": "./dist/plugins.mjs"
+      "require": "./dist/plugins.cjs"
     }
   }
 }
